crates/toml_edit/tests/fixtures/invalid/string/no-open-06.stderr
TOML parse error at line 1, column 6
  |
1 | a = [a"""]
  |      ^
invalid array
expected `]`
